
  ChangeLog for SPINspiral code repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   198: sluys, 10/07/2009
     - Changed output format: 
       - added waveform and parameter info to header
       - added posterior and prior to body
     
   197: sluys, 10/07/2009
     - Use the pN order as specified in the input files
     
   196: sluys, 10/07/2009
     - Corrected typo from rev.194
     
   195: sluys, 10/07/2009
     - Changed input files:
       - moved mcmcWaveform from input.mcmc to input.parameters
       - added mcmcPNorder and injectionPNorder to input.parameters and input.injection
       
   194: sluys, 10/07/2009
     - Cleaning and commenting in SPINspiral_lal
     
   193: sluys, 07/07/2009
     - Updated Fugu Makefile
     
   192: sluys, 07/07/2009
     - Updated match, overlap and related routines to work with two different waveforms
     - Removed FrVect.h, FrFilter.h and FrIO.h from include/  
       They're part of libframe, see fugu:/export/apps/libframe/include/ for a recent version
   
   191: sluys, 06/07/2009
     - Added Makefile_Fugu to allow static compilation on Fugu
   
   190: sluys, 24/06/2009
     - Free non-spinning LAL variables
     
   188: sluys, 18/06/2009
     - Added Doxygen comments in SPINspiral_routines.c

   187: sluys, 18/06/2009
     - Merged two non-spinning LAL-interface routines
   
   186: sluys, 18/06/2009
     - Started adding interface routines to generate non-spinning LAL waveforms
   
   185: sluys, 18/06/2009
     - Merged intScrOut and printMuch to parameter beVerbose
     - Main input file changed!
     - All warnings and errors are written to stderr now
     
   184: sluys, 18/06/2009
     - Renamed I/O files as well
     
   183: sluys, 17/06/2009
     - Renamed files from mcmc_*.c to SPINspiral_*.c and mcmc.h to SPINspiral.h (sorry!)
     - Chaged example Makefiles accordingly