@@ -1439,104 +1439,6 @@ void writeChainInfo(struct MCMCvariables mcmc)
 
 
 
-
-
-
-
-// ****************************************************************************************************************************************************  
-/**
- * \brief Copy some of the elements of the struct runPar to the struct MCMCvariables
- */
-// ****************************************************************************************************************************************************  
-void copyRun2MCMC(struct runPar run, struct MCMCvariables *mcmc)
-{
-  int i=0,j=0;
-  
-  mcmc->beVerbose = run.beVerbose;                      // Print long stretches of output
-  
-  mcmc->maxnPar = run.maxnPar;                          // Absolute maximum number of mcmc/template parameters allowed
-  mcmc->parDBn = run.parDBn;                            // Number of elements in hardcoded parameter database
-  mcmc->nMCMCpar = run.nMCMCpar;                        // Number of mcmc/template parameters
-  mcmc->nInjectPar = run.nInjectPar;                    // Number of mcmc/template parameters
-  
-  mcmc->mcmcWaveform = run.mcmcWaveform;                // Waveform used as MCMC template
-  mcmc->mcmcPNorder = run.mcmcPNorder;                  // pN order used for MCMC template
-  mcmc->injectionWaveform = run.injectionWaveform;      // Waveform used as injection template
-  mcmc->injectionPNorder = run.injectionPNorder;        // pN order used for injection template
-  mcmc->networkSize = run.networkSize;                  // Network size
-  mcmc->seed = run.MCMCseed;                            // MCMC seed
-  mcmc->blockFrac = run.blockFrac;                      // Fraction of non-correlated updates that is a block update
-  mcmc->corrFrac = run.corrFrac;                        // Fraction of MCMC updates that used the correlation matrix
-  mcmc->matAccFr = run.matAccFr;                        // Fraction of elements on the diagonal that must 'improve' in order to accept a new covariance matrix
-  mcmc->offsetMCMC = run.offsetMCMC;                    // Start MCMC offset (i.e., not from injection values) or not
-  mcmc->offsetX = run.offsetX;                          // Start offset chains from a Gaussian distribution offsetX times wider than parSigma
-  
-  mcmc->nIter = run.nIter;                              // Number of MCMC iterations to compute
-  mcmc->thinOutput = run.thinOutput;                    // Save every thiOutput-th MCMC iteration to file
-  mcmc->thinScreenOutput = run.thinScreenOutput;        // Save every thiOutput-th MCMC iteration to screen
-  mcmc->adaptiveMCMC = run.adaptiveMCMC;                // Use adaptive MCMC
-  
-  mcmc->correlatedUpdates = run.correlatedUpdates;      // Switch to do correlated update proposals
-  mcmc->nCorr = run.nCorr;                              // Number of iterations for which the covariance matrix is calculated
-  mcmc->prMatrixInfo = run.prMatrixInfo;                // Print information to screen on proposed matrix updates
-  
-  mcmc->annealTemp0 = run.annealTemp0;                  // Starting temperature of the annealed chain
-  mcmc->annealNburn = run.annealNburn;                  // Number of iterations for the annealing burn-in phase
-  mcmc->annealNburn0 = run.annealNburn0;                // Number of iterations during which temp=annealTemp0
-  
-  mcmc->parallelTempering = run.parallelTempering;      // Switch to use parallel tempering
-  mcmc->maxTemp = run.maxTemp;                          // Maximum temperature in automatic parallel-tempering ladder
-  mcmc->saveHotChains = run.saveHotChains;              // Save hot (T>1) parallel-tempering chains
-  mcmc->prParTempInfo = run.prParTempInfo;              // Print information on the temperature chains
-  
-  
-  mcmc->chTemp = max(mcmc->annealTemp0,1.0);            // Current temperature
-  
-  mcmc->geocentricTc = run.geocentricTc;                // Geocentric Tc
-  mcmc->baseTime = (double)((floor)(mcmc->geocentricTc/100.0)*100);  //'Base' time, gets rid of the first 6-7 digits of GPS time
-  
-  
-  for(i=0;i<mcmc->maxnPar;i++) {
-    mcmc->injParVal[i] = run.injParVal[i];
-    mcmc->injID[i] = run.injID[i];
-    
-    mcmc->parNumber[i] = run.parNumber[i];
-    mcmc->parID[i] = run.parID[i];
-    mcmc->parBestVal[i] = run.parBestVal[i];
-    mcmc->parFix[i] = run.parFix[i];
-    mcmc->parStartMCMC[i] = run.parStartMCMC[i];
-    mcmc->parSigma[i] = run.parSigma[i];
-    
-    mcmc->priorBoundLow[i] = run.priorBoundLow[i];
-    mcmc->priorBoundUp[i] = run.priorBoundUp[i];
-    mcmc->priorType[i] = run.priorType[i];
-    
-    //mcmc->[i] = run.[i];
-  }
-  
-  //Parameter database:
-  for(i=0;i<mcmc->parDBn;i++) {
-    mcmc->injRevID[i] = run.injRevID[i];
-    mcmc->parRevID[i] = run.parRevID[i];
-    
-    for(j=0;j<99;j++) {
-      mcmc->parName[i][j] = run.parName[i][j];
-      mcmc->parAbrev[i][j] = run.parAbrev[i][j];
-      mcmc->parAbrv[i][j] = run.parAbrv[i][j];
-    }
-  }
-  
-  mcmc->nTemps = run.nTemps;                            // Size of temperature ladder
-  for(i=0;i<mcmc->nTemps;i++) mcmc->temps[i] = run.temps[i];
-
-} // End copyRun2MCMC()
-// ****************************************************************************************************************************************************  
-
-
-
-
-
-  
 // ****************************************************************************************************************************************************  
 /**
  * \brief Choose and print offset starting values for the Markov chain
@@ -1550,7 +1452,7 @@ void copyRun2MCMC(struct runPar run, struct MCMCvariables *mcmc)
 // ****************************************************************************************************************************************************  
 void startMCMCOffset(struct parSet *par, struct MCMCvariables *mcmc, struct interferometer *ifo[], struct runPar run)
 {
-  int i=0, iInj=0, nstart=0, nDiffPar=0;
+  int i=0, iInj=0, nStart=0, nDiffPar=0;
   double db = 0.0;
   
   printf("\n");
@@ -1587,7 +1489,8 @@ void startMCMCOffset(struct parSet *par, struct MCMCvariables *mcmc, struct inte
   
   // *** Add a random offset to the MCMC starting parameters:
   if(mcmc->offsetMCMC != 0) {
-    while(mcmc->logL[mcmc->iTemp] < mcmc->minlogL+1.0) { // Accept only good starting values
+    //while(mcmc->logL[mcmc->iTemp] < mcmc->minlogL+1.0) { // Accept only good starting values *** don't do this for starting values - only for updates later on ***
+    while(mcmc->logL[mcmc->iTemp] < 1.0) { // Accept only good starting values
       mcmc->acceptPrior[mcmc->iTemp] = 1;
       
       for(i=0;i<mcmc->nMCMCpar;i++) {  //For each MCMC parameter
@@ -1610,13 +1513,13 @@ void startMCMCOffset(struct parSet *par, struct MCMCvariables *mcmc, struct inte
 	localPar(par, ifo, mcmc->networkSize, injectionWF, run);
 	mcmc->logL[mcmc->iTemp] = netLogLikelihood(par, mcmc->networkSize, ifo, mcmc->mcmcWaveform, injectionWF, run);  //Calculate the likelihood
       }
-      nstart = nstart + 1;
+      nStart = nStart + 1;
       
       
       
       // Print each trial starting value:
-      if(mcmc->beVerbose>=1 && (nstart % mcmc->thinOutput)==0) {
-	printf("%9d%10.3lf",nstart,mcmc->logL[mcmc->iTemp]);
+      if(mcmc->beVerbose>=2 && (nStart % mcmc->thinOutput)==0) {
+	printf("%9d%10.3lf",nStart,mcmc->logL[mcmc->iTemp]);
 	for(i=0;i<mcmc->nMCMCpar;i++) {
 	  if(mcmc->parID[i]>=11 && mcmc->parID[i]<=19) {  //GPS time
 	    printf(" %18.4f",mcmc->param[mcmc->iTemp][i]);
@@ -1627,7 +1530,7 @@ void startMCMCOffset(struct parSet *par, struct MCMCvariables *mcmc, struct inte
 	printf("\n");
       }
       
-      if(mcmc->mcmcWaveform != mcmc->injectionWaveform && nDiffPar != 0) break;  //Don't require good logL if not all parameters match between injection and MCMC waveforms
+      if(mcmc->mcmcWaveform != mcmc->injectionWaveform && nDiffPar != 0 && nStart > 1e4) break;  //Don't require good logL if not all parameters match between injection and MCMC waveforms  *** This gives starting values much farther from the signal! *** -> do it after 10^4 trials
       
     }  //while(mcmc->logL[mcmc->iTemp] < mcmc->minlogL+1.0) // Accept only good starting values
   } //if(mcmc->offsetMCMC != 0)
@@ -1647,7 +1550,7 @@ void startMCMCOffset(struct parSet *par, struct MCMCvariables *mcmc, struct inte
   printf("\n");
   
   //Print parameter values:
-  printf("%9d%10.3lf",nstart,mcmc->logL[mcmc->iTemp]);
+  printf("%9d%10.3lf",nStart,mcmc->logL[mcmc->iTemp]);
   for(i=0;i<mcmc->nMCMCpar;i++) {
     if(mcmc->parID[i]>=11 && mcmc->parID[i]<=19) {  //GPS time
       printf(" %18.4f",mcmc->param[mcmc->iTemp][i]);
